--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#FF8C00</color>
+    <color name="colorPrimaryDark">#D2691E</color>
     <color name="colorAccent">#D81B60</color>
     <color name="red">#D81B60</color>
     <color name="black">#000000</color>
+    <color name="lightblue">#ADD8E6</color>
 </resources>
