--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,13 +6,11 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="buttonStyle">@font/alike_angular</item>.
-        <item name="editTextStyle">@font/alike_angular</item>
-        <item name="viewTextStyle">@font/alike_angular</item>
+        <item name="buttonStyle">@font/alike_angular</item>
+        <item name="android:textViewStyle">@font/alike_angular</item>
         <item name="android:colorBackground">@color/lightblue</item>
         <item name="android:color">@color/lightblue</item>
         <item name="editTextColor">@color/black</item>
-        <item name="viewTextColor">@color/black</item>
     </style>
 
 </resources>
